profile banner spacing fixed

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -25,8 +25,3 @@
   height: 50px;
   border-radius: 50%;
 }
-.avatar-inbox-new {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
